fix: overflowx is always scroll

--- a/src/app/staff/solo/manual-order-modal/checkout-modal/checkout-modal.component.scss
+++ b/src/app/staff/solo/manual-order-modal/checkout-modal/checkout-modal.component.scss
@@ -48,7 +48,7 @@
         }
 
         .content {
-            overflow: auto;
+            overflow-y: scroll;
             
             .select {
                 display: flex;
